implemented apikey validation middleware for encode endpoint only
